# bbsync

./: README.md  pyproject.toml
bbsync/: auth.py  cli.py  client.py  config.py  manifest.py  notify.py  schedule.py  sync.py  textindex.py
bbsync/server/: app.py  jobs.py
bbsync/server/static/: index.html
