[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bbsync"
version = "0.1.0"
description = "Auto-download and organise Imperial Blackboard course files"
requires-python = ">=3.11"
dependencies = ["playwright>=1.40", "pypdf>=4.0", "fastapi>=0.110", "uvicorn>=0.29", "anthropic>=0.60"]

[project.scripts]
bbsync = "bbsync.cli:main"

[tool.setuptools]
packages = ["bbsync", "bbsync.server"]

[tool.setuptools.package-data]
"bbsync.server" = ["static/*"]
